fixed: jumbotron spacing

--- a/app/views/homepage/myCSS.css
+++ b/app/views/homepage/myCSS.css
@@ -41,6 +41,19 @@ body{
     size:20px;
 }
 
+#jumbotronn{
+    
+   margin-top: 200px;
+  
+}
+
+
+
+
+.navbar{
+    margin:0px;
+    
+}
 
 h4{
     color:#FFFFFF;
